infrastructure/ses-email-service/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ses-email-service-ingress
  namespace: ses-email-service
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ses-email-service
  ingress:
    - fromEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "465"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: ses-email-service
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ses-email-service
